@@ -1,31 +1,0 @@
-/.cvsignore////*///
-/ConfigDir.py////*///
-/ConfigReader.py////*///
-/ConnChoice.py////*///
-/CreateIcons.py////*///
-/CurrentRateMeasure.py////*///
-/HTTPHandler.py////*///
-/PSYCO.py////*///
-/RateLimiter.py////*///
-/RateMeasure.py////*///
-/RawServer.py////*///
-/ServerPortHandler.py////*///
-/SocketHandler.py////*///
-/bencode.py////*///
-/bitfield.py////*///
-/clock.py////*///
-/download_bt1.py////*///
-/inifile.py////*///
-/iprangeparse.py////*///
-/launchmanycore.py////*///
-/natpunch.py////*///
-/parseargs.py////*///
-/parsedir.py////*///
-/piecebuffer.py////*///
-/selectpoll.py////*///
-/subnetparse.py////*///
-/torrentlistparse.py////*///
-/zurllib.py////*///
-D/BT1///////
-/__init__.py////*///
-D/GUI///////
